flux/production/admissionregistration.k8s.io-v1-ValidatingWebhookConfiguration-karpenter-validation.webhook.provisioners.karpenter.sh.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/instance: karpenter
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: karpenter
    app.kubernetes.io/version: 0.17.0
    helm.sh/chart: karpenter-v0.17.0
  name: validation.webhook.provisioners.karpenter.sh
  namespace: karpenter
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: karpenter
      namespace: karpenter
  failurePolicy: Fail
  name: validation.webhook.provisioners.karpenter.sh
  rules:
  - apiGroups:
    - karpenter.k8s.aws
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - awsnodetemplates
    - awsnodetemplates/status
    scope: '*'
  - apiGroups:
    - karpenter.sh
    apiVersions:
    - v1alpha5
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - provisioners
    - provisioners/status
  sideEffects: None
